# tree-sitter-cranberry

./: Cargo.toml  binding.gyp  grammar.js  hello  package.json  tree-sitter.json
bindings/node/: binding.cc  index.d.ts  index.js
bindings/rust/: build.rs  lib.rs
queries/: brackets.scm  highlights.scm  indents.scm  outline.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c
