[package]
name = "tree-sitter-cranberry"
description = "A treesitter grammar for Cranberry"
version = "0.1.0"
authors = ["creepersaur"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "cranberry"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/creepersaur/tree-sitter-cranberry"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.3"
